# STDF-Parser-CXX_PY

./: .gitignore  CMakeLists.txt  README.md  build_libstdf_universal.py  build_libstdf_windows_native.py  build_simple_dll.bat  build_windows.bat  build_windows.ps1  build_windows_dll_native.bat  clickhouse_connect_wrapper.py  clickhouse_pool.py  clickhouse_utils.py  clickhouse_utils_connect.py  compare_cpp_vs_pystdf.py  comprehensive_comparison.py  debug_format.py  debug_raw_records.py  debug_record_types.py  debug_stdf.cpp  debug_test.py  extract_all_measurements.py  extract_all_measurements_plus_clickhouse_connect.py  extract_all_measurements_plus_clickhouse_connect_parallel.py  extract_all_measurements_pycompute.py  extract_measurements_pystdf.py  field_defs_guide.txt  install_libstdf.sh  install_libstdf_windows.bat  libstdf-0.4.tar.bz2  libstdf.so.0  minimal_test.py  requirements.txt  run_test.sh  run_test_windows.bat  run_test_windows_universal.bat  run_wsl_from_windows.bat  setup.py  setup_universal.py  setup_windows_mingw.py  simple_stdf_dll.c  (+13 more)
cpp/: CMakeLists.txt  CMakeLists_windows.txt
cpp/field_defs/: ftr_fields.def  hbr_fields.def  mpr_fields.def  prr_fields.def  ptr_fields.def  sbr_fields.def
cpp/include/: dynamic_field_extractor.h  measurement_fields.def  measurement_macros.h  stdf_binary_parser.h  stdf_parser.h  ultra_fast_processor.h
cpp/src/: dynamic_field_extractor.cpp  python_bridge.cpp  stdf_parser.cpp  ultra_fast_processor.cpp
cpp/third_party_windows/include/: libstdf_sys_config.h
cpp/third_party_windows/man/man3/: libstdf_bswap.h.3  libstdf_types.h.3
libstdf-0.4/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  Makefile.windows  NEWS  README  TODO  aclocal.m4  config.status  configure  configure.ac  libstdf-config  libstdf-config.in  libstdf-doc.c  libstdf-doc.c.in  libstdf.pc  libstdf.pc.in  libtool  ltmain.sh
libstdf-0.4/doc/: Makefile  Makefile.in
libstdf-0.4/doc/man/: Makefile  Makefile.in
libstdf-0.4/doc/man/man3/: Makefile  Makefile.am  Makefile.in  libstdf.h.3  libstdf_const.h.3  libstdf_win32.h.3
libstdf-0.4/examples/: Makefile  Makefile.am  Makefile.in  dump_records_to_ascii  dump_records_to_ascii.c  dump_records_to_html  dump_records_to_html.c  example  example.c  extract_records  extract_records.c  is_valid_stdf  is_valid_stdf.c  makestdf  makestdf.c  record_stats  record_stats.c  stdf2img.c  stdf2xtdf  stdf2xtdf.c
libstdf-0.4/examples/.deps/: dump_records_to_ascii.Po  dump_records_to_html.Po  example.Po  extract_records.Po  is_valid_stdf.Po  makestdf.Po  record_stats.Po  stdf2xtdf.Po
libstdf-0.4/examples/.libs/: dump_records_to_ascii  dump_records_to_html  example  extract_records  is_valid_stdf  makestdf  record_stats  stdf2xtdf
libstdf-0.4/include/: Makefile  libstdf_sys_config.h
libstdf-0.4/m4/: stdf_bzip2.m4  stdf_debug_options.m4  stdf_gzip.m4  stdf_liblzw.m4  stdf_libtool.m4  stdf_vapier_dev.m4  stdf_zziplib.m4
libstdf-0.4/src/: Makefile  Makefile.am  Makefile.in  dtc.lo  libstdf.c  libstdf.la  libstdf.lo  rec.lo
libstdf-0.4/src/.deps/: dtc.Plo  libstdf.Plo  rec.Plo
libstdf-0.4/src/.libs/: libstdf.la  libstdf.lai  libstdf.so.0
libstdf-0.4/tests/: Makefile  ascii.good.bz2  create.good.bz2  html.good.bz2  stats.good.bz2
python/: clickhouse_integration.py  library_loader.py  stdf_cpp_wrapper.py  stdf_field_config.json
tests/: test_cpp_parser.py
